// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default MovieList component renders correctly GridMovieList renders correctly 1`] = `
<main
  className="gridMovieList"
>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/AnLCqcH66Ecu8VFmXu3RofK4SMK.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          T-34
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            War
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        4.5
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/svIDTNUoajS8dLEo7EosxvyAsgJ.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Glass
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Mystery
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.8
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/AiRfixFcfTkNbn2A73qVJPlpkUo.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Robin Hood
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        5.8
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/lHu1wtNaczFPGFDTrjCSzeLPTKN.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Bohemian Rhapsody
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Music
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        8.2
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/l76Rgp32z2UxjULApxGXAPpYdAP.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Overlord
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Horror
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            War
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Science Fiction
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.9
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/8yZAx7tlKRZIg7pJfaPhl00yHIQ.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Escape Room
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Horror
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.3
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Aquaman
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Fantasy
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Science Fiction
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.8
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/uXJVpPXxZO4L8Rz3IG1Y8XvZJcg.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Mortal Engines
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Science Fiction
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Fantasy
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/v3QyboWRoA4O9RbcsqH8tJMe8EB.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Creed II
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.7
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/ij0xoc13hGhrYIlXGGuPXWTh3vi.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          HOW TO TRAIN YOUR DR...
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Animation
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Family
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        8.1
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/wrFpXMNBRj2PBiN4Z5kix51XaIZ.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          A Star Is Born
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Music
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Romance
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        7.4
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/t0idiLMalKMj2pLsvqHrOM4LPdQ.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          The Mule
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Crime
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.3
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          AVENGERS: INFINITY W...
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Fantasy
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        8.3
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/fw02ONlDhrYjTSZV8XO6hhU3ds3.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Bumblebee
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Science Fiction
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.5
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/f27RTnWEc2bhVtfSlKmxxypznfR.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Widows
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Crime
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.7
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/hgWAcic93phg4DOuQ8NrsgQWiqu.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Serenity
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Thriller
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        5.1
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/2uNW4WbgBXL25BAbXGLnLqX71Sw.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          Venom
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Science Fiction
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        6.6
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/hPuZR2bFoV0kuBrA98exWyvTf40.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          CAN YOU EVER FORGIVE...
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Drama
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Comedy
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Crime
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        7.1
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/t0jwlwFUrtkPJoq5JH9YrRVROXZ.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          FATE/STAY NIGHT: HEA...
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Animation
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Action
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Fantasy
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Adventure
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        3.9
      </span>
    </div>
  </article>
  <article
    className="card"
  >
    <img
      alt="Poster"
      height="75%"
      src="https://image.tmdb.org/t/p/w300/nJVPgIq3icZMQ26p5uWIFdUZJfL.jpg"
    />
    <div
      className="onHover"
    >
      <button
        aria-label="Watch"
        className="btnWatch"
        type="button"
      >
        <svg
          height="80px"
          viewBox="0 0 58 58"
          width="80px"
          x="0px"
          y="0px"
        >
          <circle
            cx="29"
            cy="29"
            r="29"
            style={
              Object {
                "fill": "#0aaee4",
              }
            }
          />
          <g>
            <polygon
              points="44,29 22,44 22,29.273 22,14"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
            <path
              d="M22,45c-0.16,0-0.321-0.038-0.467-0.116C21.205,44.711,21,44.371,21,44V14 c0-0.371,0.205-0.711,0.533-0.884c0.328-0.174,0.724-0.15,1.031,0.058l22,15C44.836,28.36,45,28.669,45,29s-0.164,0.64-0.437,0.826 l-22,15C22.394,44.941,22.197,45,22,45z M23,15.893v26.215L42.225,29L23,15.893z"
              style={
                Object {
                  "fill": "#fff",
                }
              }
            />
          </g>
        </svg>
        <span>
           Watch Now 
        </span>
      </button>
      <button
        aria-label="View Info"
        className="btn transparentBtn"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
    <div
      className="info"
    >
      <div>
        <h3
          className="info_title"
        >
          LelleBelle
        </h3>
        <p>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Music
          </span>
          <span
            className="genre"
            style={
              Object {
                "color": "#0aaee4",
                "fontSize": "0.8rem",
              }
            }
          >
            Romance
          </span>
        </p>
      </div>
      <span
        className="numRating"
        style={
          Object {
            "color": "#0aaee4",
          }
        }
      >
        4.4
      </span>
    </div>
  </article>
</main>
`;

exports[`Default MovieList component renders correctly TableMovieList renders correctly 1`] = `
<main
  className="tableMovieList"
>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/AnLCqcH66Ecu8VFmXu3RofK4SMK.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        T-34
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        War
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <p
        className="card_overview"
      >
        1941 - WWii. the second lieutenant Nikolai ivushkin, commander of a t-34, engages in an unequal battle against the tank ace Klaus Jager in a battle near moscow. His mission is more of a suicide - to destroy a dozen german tanks, all by himself. that said, luck does favour the bold. He wins the battle, barely survives, but loses his tank and lands himself in captivity for three long years... there was little to no chance for ivushkin and Jager to meet again, but the war knows how to throw a curve...
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          4.5
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/svIDTNUoajS8dLEo7EosxvyAsgJ.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Glass
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Mystery
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <p
        className="card_overview"
      >
        In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.8
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/AiRfixFcfTkNbn2A73qVJPlpkUo.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Robin Hood
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <p
        className="card_overview"
      >
        A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          5.8
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/lHu1wtNaczFPGFDTrjCSzeLPTKN.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Bohemian Rhapsody
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Music
      </span>
      <p
        className="card_overview"
      >
        Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          8.2
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/l76Rgp32z2UxjULApxGXAPpYdAP.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Overlord
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Horror
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        War
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Science Fiction
      </span>
      <p
        className="card_overview"
      >
        France, World War II, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their plane crashes during a mission consisting of destroying a German radio tower in Cielblanc, a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realize that, in addition to fighting Nazi troops that patrol the village, they also must fight against something else.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.9
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/8yZAx7tlKRZIg7pJfaPhl00yHIQ.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Escape Room
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Horror
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <p
        className="card_overview"
      >
        Six strangers find themselves in circumstances beyond their control, and must use their wits to survive.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.3
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Aquaman
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Fantasy
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Science Fiction
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <p
        className="card_overview"
      >
        Once home to the most advanced civilization on Earth, the city of Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people -- and then the surface world. Standing in his way is Aquaman, Orm's half-human, half-Atlantean brother and true heir to the throne. With help from royal counselor Vulko, Aquaman must retrieve the legendary Trident of Atlan and embrace his destiny as protector of the deep.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.8
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/uXJVpPXxZO4L8Rz3IG1Y8XvZJcg.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Mortal Engines
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Science Fiction
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Fantasy
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <p
        className="card_overview"
      >
        Set in a world many thousands of years in the future. Earth’s cities now roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive Traction Cities, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the Outlands who will change the course of his life forever.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/v3QyboWRoA4O9RbcsqH8tJMe8EB.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Creed II
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <p
        className="card_overview"
      >
        Follows Adonis Creed's life inside and outside of the ring as he deals with new found fame, issues with his family, and his continuing quest to become a champion.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.7
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/ij0xoc13hGhrYIlXGGuPXWTh3vi.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        How to Train Your Dragon: The Hidden World
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Animation
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Family
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <p
        className="card_overview"
      >
        As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away.  When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          8.1
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/wrFpXMNBRj2PBiN4Z5kix51XaIZ.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        A Star Is Born
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Music
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Romance
      </span>
      <p
        className="card_overview"
      >
        Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          7.4
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/t0idiLMalKMj2pLsvqHrOM4LPdQ.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        The Mule
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Crime
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <p
        className="card_overview"
      >
        A 90 year old horticulturalist and Korean War veteran is caught transporting $3 million worth of cocaine through Illinois for a Mexican drug cartel.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.3
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Avengers: Infinity War
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Fantasy
      </span>
      <p
        className="card_overview"
      >
        As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          8.3
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/fw02ONlDhrYjTSZV8XO6hhU3ds3.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Bumblebee
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Science Fiction
      </span>
      <p
        className="card_overview"
      >
        On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.  When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.5
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/f27RTnWEc2bhVtfSlKmxxypznfR.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Widows
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Crime
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <p
        className="card_overview"
      >
        A police shootout leaves four thieves dead during an explosive armed robbery attempt in Chicago. Their widows have nothing in common except a debt left behind by their spouses' criminal activities. Hoping to forge a future on their own terms, they join forces to pull off a heist.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.7
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/hgWAcic93phg4DOuQ8NrsgQWiqu.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Serenity
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Thriller
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <p
        className="card_overview"
      >
        Baker Dill is a fishing boat captain leading tours off a tranquil, tropical enclave called Plymouth Island. His quiet life is shattered, however, when his ex-wife Karen tracks him down with a desperate plea for help.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          5.1
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/2uNW4WbgBXL25BAbXGLnLqX71Sw.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Venom
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Science Fiction
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <p
        className="card_overview"
      >
        Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          6.6
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/hPuZR2bFoV0kuBrA98exWyvTf40.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Can You Ever Forgive Me?
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Drama
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Comedy
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Crime
      </span>
      <p
        className="card_overview"
      >
        When bestselling celebrity biographer Lee Israel is no longer able to get published because she has fallen out of step with current tastes, she turns her art form to deception, abetted by her loyal friend Jack.  It is a story of two difficult, socially inept, people somehow becoming partners-in-crime in forgeries: one creating and the other selling it.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          7.1
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/t0jwlwFUrtkPJoq5JH9YrRVROXZ.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        Fate/stay night: Heaven’s Feel II. lost butterfly
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Animation
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Action
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Fantasy
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Adventure
      </span>
      <p
        className="card_overview"
      >
        Theatrical-release adaptation of the visual novel "Fate/stay night", following the third and final route. (Part 2 of a trilogy.)
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          3.9
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
  <article
    className="card"
  >
    <div
      className="card_image"
    >
      <img
        alt="Poster"
        src="https://image.tmdb.org/t/p/w300/nJVPgIq3icZMQ26p5uWIFdUZJfL.jpg"
      />
    </div>
    <div
      className="card_info"
    >
      <h2
        className="card_title"
      >
        LelleBelle
      </h2>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Music
      </span>
      <span
        className="genre"
        style={
          Object {
            "color": "#0aaee4",
            "fontSize": undefined,
          }
        }
      >
        Romance
      </span>
      <p
        className="card_overview"
      >
        19-year old Belle practices playing the violin diligently, but is unable to impart her music with a sensitive undertone. Her life changes when she discovers that sexual desire stimulates passion in her music.
      </p>
      <div
        className="card_rating"
      >
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <div
          className="star starSelected"
        />
        <span
          className="numRating"
          style={
            Object {
              "color": "#0aaee4",
            }
          }
        >
          4.4
        </span>
      </div>
      <button
        aria-label="Watch Now"
        className="btn blueBtn"
        onClick={[Function]}
        type="button"
      >
        Watch Now
      </button>
    </div>
  </article>
</main>
`;
